--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <div class="container">                       
             <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" alt="James Lee" />
             <div class="profile-content pull-left">
-                <h1 class="name">James Lee</h1>
-                <h2 class="desc">Web App Developer</h2>   
+                <h1 class="name">Devon Wijesinghe</h1>
+                <h2 class="desc">Undergraduate Software Engineer</h2>   
                 <ul class="social list-inline">
                     <li><a href="#"><i class="fa fa-twitter"></i></a></li>                   
                     <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
