Chage button text

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <li class="last-item" ><a href="https://www.instagram.com/devon_wijesinghe/"><i class="fa fa-instagram"></i></a></li>              
                     </ul> 
                 </div><!--//profile-->
-                <a class="btn btn-cta-primary" href="https://github.com/wdevon99/wdevon99.github.io/raw/master/assets/cv/Final.pdf" target="_blank"><i class="fa fa-eye"></i> View Curriculum Vitae</a>              
+                <a class="btn btn-cta-primary" href="https://github.com/wdevon99/wdevon99.github.io/raw/master/assets/cv/Final.pdf" target="_blank"><i class="fa fa-arrow-down"></i> Download CV</a>              
             <center> 
             </div><!--//container-->
     </header><!--//header-->
