--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
                     <h1 class="name">Devon Wijesinghe</h1>
                     <h2 class="desc">Undergraduate Software Engineer</h2>   
                     <ul class="social list-inline">
-                        <li><a href="https://www.linkedin.com/in/devon-wijesinghe/"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="https://github.com/wdevon99"><i class="fa fa-github-alt"></i></a></li>   
-                        <li><a href="https://facebook.com/wdevon99"><i class="fa fa-facebook"></i></a></li>                   
-                        <li class="last-item" ><a href="https://www.instagram.com/devon_wijesinghe/"><i class="fa fa-instagram"></i></a></li>              
+                        <li><a href="http://www.linkedin.com/in/devon-wijesinghe/"><i class="fa fa-linkedin"></i></a></li>
+                        <li><a href="http://github.com/wdevon99"><i class="fa fa-github-alt"></i></a></li>   
+                        <li><a href="http://facebook.com/wdevon99"><i class="fa fa-facebook"></i></a></li>                   
+                        <li class="last-item" ><a href="http://www.instagram.com/devon_wijesinghe/"><i class="fa fa-instagram"></i></a></li>              
                     </ul> 
                 </div><!--//profile-->
                 <a class="btn btn-cta-primary" href="https://github.com/wdevon99/wdevon99.github.io/raw/master/assets/cv/Final.pdf" target="_blank"><i class="fa fa-arrow-down"></i> Download CV</a>              
